Revert "fix: id: 45994-FE-Responsive Page: Extra white space issue (#520)"
This reverts commit dbbf7bdc66ff54ce1c91c826fa4e5d5e83958c37.

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -102,7 +102,7 @@ $modal-footer-background:                        #fff !default; //add $global-ba
 }
 
 .autoHeight {
-  height: auto;
+  height: calc(100vh - 400px);
   overflow: auto;
 }
 
